--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
     <script src="https://kit.fontawesome.com/5eeffc1783.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>S K I N C A R E</title>
 </head>
 
 <body>
@@ -25,7 +25,8 @@
                 <img class="img_logo" src="./img/logo.png" alt="logo">
             </div>
             <div class="navbar_right">
-                <input type="text" name="search_product" id="input_product" placeholder="Search product...">
+                <input type="text" name="search_product" class="input_product" placeholder="Search product..."><i
+                    class="fa-solid fa-magnifying-glass icon-search"></i>
                 <img src="./img/Button 1 (1).png" alt="cart" id="icon_cart">
                 <img src="./img/./Button 1.png" alt="user">
             </div>
@@ -44,9 +45,173 @@
                 <a href="#">Body</a>
             </div>
             <div class="search">
-                <input type="text" name="" id="search">
-                <div class="sort_by"></div>
+                <div class="input">
+                    <input type="text" name="search_product" class="input_product" placeholder="Search product...">
+                </div>
+                <div class="sort_by"><span>Sort by</span><i class="fa-solid fa-sort"></i></div>
             </div>
+        </div>
+        <div class="list_products">
+            <div class="item_product">
+                <img src="./img/./Image 1 (1).png" alt="">
+                <div class="tag">Best-seller</div>
+                <div class="body_item">
+                    <h3 class="title">Product title</h3>
+                    <p class="des">Labore sinit ipsume dolore mollit</p>
+                    <div class="price">
+                        <h1 class="price">$32</h1>
+                        <img class="cart" src="./img/./Button 1 (2).png" alt="">
+                    <h3>$42</h3>
+                </div>
+                </div>
+            </div>
+            <div class="item_product">
+                <img src="./img/./Image 1 (2).png" alt="">
+                <div class="tag">Best-seller</div>
+                <div class="body_item">
+                    <h3 class="title">Product title</h3>
+                    <p class="des">Labore sinit ipsume dolore mollit</p>
+                    <div class="price">
+                        <h1 class="price">$22</h1>
+                        <img class="cart" src="./img/./Button 1 (2).png" alt="">
+                        <h3>$28</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="item_product">
+                <img src="./img/./Image 1 (3).png" alt="">
+                <div class="tag">Best-seller</div>
+                <div class="body_item">
+                    <h3 class="title">Product title</h3>
+                    <p class="des">Labore sinit ipsume dolore mollit</p>
+                    <div class="price">
+                        <h1 class="price">$18</h1>
+                        <img class="cart" src="./img/./Button 1 (2).png" alt="">
+                        <h3>$28</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="item_product">
+                <img src="./img/./Image 1 (4).png" alt="">
+                <div class="tag">Best-seller</div>
+                <div class="body_item">
+                    <h3 class="title">Product title</h3>
+                    <p class="des">Labore sinit ipsume dolore mollit</p>
+                    <div class="price">
+                        <h1 class="price">$48</h1>
+                        <img class="cart" src="./img/./Button 1 (2).png" alt="">
+                        <h3>$56</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="list_products">
+            <div class="item_product">
+                <img src="./img/./Image 1 (5).png" alt="">
+                <div class="body_item">
+                    <h3 class="title">Product title</h3>
+                    <div class="price">
+                        <h1 class="price">$31</h1>
+                        <img class="cart" src="./img/./Button 1 (2).png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="item_product">
+                <img src="./img/./Image 1 (6).png" alt="">
+                <div class="tag">New</div>
+                <div class="body_item">
+                    <h3 class="title">Product title</h3>
+                    <p class="des">Labore sinit ipsume dolore mollit</p>
+                    <div class="price">
+                        <h1 class="price">$40</h1>
+                        <img class="cart" src="./img/./Button 1 (2).png" alt="">
+                        <h3>$48</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="item_product">
+                <img src="./img/./Image 1 (7).png" alt="">
+                <div class="body_item">
+                    <h3 class="title">Product title</h3>
+                    <p class="des">Labore sinit ipsume dolore mollit</p>
+                    <div class="price">
+                        <h1 class="price">$26</h1>
+                        <img class="cart" src="./img/./Button 1 (2).png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="item_product">
+                <img src="./img/./Image 1 (8).png" alt="">
+                <div class="body_item">
+                    <h3 class="title">Product title</h3>
+                    <p class="des">Labore sinit ipsume dolore mollit</p>
+                    <div class="price">
+                        <h1 class="price">$18</h1>
+                        <img class="cart" src="./img/./Button 1 (2).png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="list_products">
+            <div class="item_product">
+                <img src="./img/./Image 1 (9).png" alt="">
+                <div class="tag">New</div>
+                <div class="body_item">
+                    <h3 class="title">Product title</h3>
+                    <p class="des">Labore sinit ipsume dolore mollit</p>
+                    <div class="price">
+                        <h1 class="price">$52</h1>
+                        <img class="cart" src="./img/./Button 1 (2).png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="item_product">
+                <img src="./img/./Image 1 (10).png" alt="">
+                <div class="body_item">
+                    <h3 class="title">Product title</h3>
+                    <p class="des">Labore sinit ipsume dolore mollit</p>
+                    <div class="price">
+                        <h1 class="price">$47</h1>
+                        <img class="cart" src="./img/./Button 1 (2).png" alt="">
+                        <h3>$42</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="item_product">
+                <img src="./img/./Image 1 (11).png" alt="">
+                <div class="body_item">
+                    <h3 class="title">Product title</h3>
+                    <p class="des">Labore sinit ipsume dolore mollit</p>
+                    <div class="price">
+                        <h1 class="price">$44</h1>
+                        <img class="cart" src="./img/./Button 1 (2).png" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="item_product">
+                <img src="./img/./Image 1 (12).png" alt="">
+                <div class="tag">New</div>
+                <div class="body_item">
+                    <h3 class="title">Product title</h3>
+                    <p class="des">Labore sinit ipsume dolore mollit</p>
+                    <div class="price">
+                        <h1 class="price">$32</h1>
+                        <img class="cart" src="./img/./Button 1 (2).png" alt="">
+                        <h3>$42</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="phanTrang">
+            <img src="./img/Button 1 (5).png" alt="" class="arrowL">
+            <span>1</span>
+            <span>2</span>
+            <span>3</span>
+            <span>4</span>
+            <img src="./img/Button 1 (6).png" class="arrowR" alt="">
+        </div>
+        <div class="footer">
+            
         </div>
     </div>
 </body>
