--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
                 <div class="input">
                     <input type="text" name="search_product" class="input_product" placeholder="Search product...">
                 </div>
-                <div class="sort_by"><span>Sort by</span><i class="fa-solid fa-sort"></i></div>
+                <div class="sort_by"><span>Sort by</span>
+                    <i class="fa-solid fa-sort"></i>
+                </div>
             </div>
         </div>
         <div class="list_products">
@@ -61,8 +63,8 @@
                     <div class="price">
                         <h1 class="price">$32</h1>
                         <img class="cart" src="./img/./Button 1 (2).png" alt="">
-                    <h3>$42</h3>
-                </div>
+                        <h3>$42</h3>
+                    </div>
                 </div>
             </div>
             <div class="item_product">
@@ -210,9 +212,67 @@
             <span>4</span>
             <img src="./img/Button 1 (6).png" class="arrowR" alt="">
         </div>
-        <div class="footer">
-            
-        </div>
+        <footer>
+            <div class="footer">
+                <div class="overview">
+                    <div class="footer-item">
+                        <h1>About</h1>
+                        <p>Home</p>
+                        <p>Shop</p>
+                        <p>Our story</p>
+                        <p>Blogs</p>
+                        <select name="" id="language">
+                            <option value="English">English</option>
+                            <option value="English">Japan</option>
+                            <option value="English">Vietnamese</option>
+                        </select>
+                    </div>
+                    <div class="footer-item">
+                        <h1>Help</h1>
+                        <p>Shipping & Returns</p>
+                        <p>Track Order</p>
+                        <p>FAQs</p>
+                    </div>
+                    <div class="footer-item">
+                        <h1>Contact</h1>
+                        <p>Phone:</p>
+                        <p>(+1) 123 456 7893</p>
+                        <p>Email:</p>
+                        <p>name@email.com</p>
+                    </div>
+                </div>
+                <div class="connect">
+                    <h2>Receive new promotions</h2>
+                    <p>Duis ea tempor commodo amet reprehende</p>
+                    <div class="email-connect">
+                        <input type="email" name="" id="email" placeholder="Input your email">
+                        <i class="fa-regular fa-envelope icon-email"></i>
+                        <div class="btnSub">
+                            <span>Subscribe</span>
+                        </div>
+                    </div>
+                    <div class="social">
+                        <img class="img1" src="./img/Twitter 1.png" alt="">
+                        <img class="img2" src="./img/Facebook 1.png" alt="">
+                        <img  class="img3" src="./img/LinkedIn 1.png" alt="">
+                        <img class="img4" src="./img/YouTube 1.png" alt="">
+                    </div>
+                    <div class="bottom-text">
+                        <span>© 2022 Branch, Inc</span>
+                        <ul>
+                            <li>Privacy</li>
+                        </ul>
+                        <ul>
+                            <li>Terms</li>
+                        </ul>
+                        <ul>
+                            <li>Sitemapc</li>
+                        </ul>
+                    </div>
+                </div>
+                
+            </div>
+        </footer>
     </div>
 </body>
 
