--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
                             <li>Terms</li>
                         </ul>
                         <ul>
-                            <li>Sitemap</li>
+                            <li>Sitemapc</li>
                         </ul>
                     </div>
                 </div>
